examples/kju/positive/functions/infinite_recursion.kju
fun f():Unit{
	f();
}

fun kju():Unit{
	f();
}