examples/kju/negative/nameResolver/use_of_not_yet_declared_function.kju
fun kju():Unit{
	f();
	fun f():Unit{
	};
}
